# quickscope-cli

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
docs/: alpha-filter.md  architecture.md  data-sources.md  learning-engine.md  web-api.md
docs/api-reference/: alph-ai-endpoints.md  dex-screener.md  gmgn-endpoints.md
docs/plans/: README.md
docs/superpowers/plans/: 2026-07-05-quickscope-implementation-plan.md
docs/superpowers/specs/: 2026-07-05-quickscope-design.md
migrations/: 001_initial.sql
src/: core.rs  lib.rs  main.rs
src/alpha/: feature_vector.rs  hard_filters.rs  mod.rs  modes.rs  narrative.rs  rug_detect.rs  scoring.rs
src/app/: input.rs  mod.rs  state.rs
src/data/: mod.rs  models.rs  orchestrator.rs  tests.rs
src/data/alph_ai/: client.rs  mod.rs  types.rs  websocket.rs
src/data/dex_screener/: client.rs  mod.rs
src/data/gmgn/: client.rs  mod.rs  rate_limiter.rs  types.rs
src/learning/: analyzer.rs  journal.rs  mod.rs  tuner.rs
src/learning/llm/: mod.rs  prompts.rs
src/storage/: cache.rs  config.rs  db.rs  journal.rs  migrations.rs  mod.rs  positions.rs
src/trade/: mod.rs  monitor.rs  risk.rs  simulator.rs
src/ui/: format.rs  layout.rs  mod.rs  sidebar.rs  theme.rs
src/ui/widgets/: analyzer.rs  chart.rs  command_palette.rs  context_menu.rs  dashboard.rs  journal.rs  mod.rs  modal.rs  progress_bar.rs  scanner.rs  search_bar.rs  settings.rs  sparkline.rs  strategy.rs  table.rs  tag.rs  toast.rs  trade_terminal.rs
src/web/: handlers.rs  mod.rs  state.rs  ws.rs
web-frontend/: Cargo.toml  index.html
web-frontend/src/: api.rs  lib.rs  main.rs
web-frontend/src/components/: nav.rs
web-frontend/src/pages/: analyzer.rs  dashboard.rs  journal.rs  mod.rs  scanner.rs  settings.rs  strategy.rs  trade.rs
