[package]
name = "quickscope"
version = "0.1.0"
edition = "2021"
description = "Solana memecoin alpha hunting TUI with paper trading"
license = "MIT"

[dependencies]
# TUI
ratatui = "0.28"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# HTTP + WebSocket
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# LLM (pluggable — OpenAI default, Anthropic optional)
async-openai = "0.24"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# CLI args
clap = { version = "4", features = ["derive", "env"] }

# Config
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
rstest = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
